--- a/css/main.css
+++ b/css/main.css
@@ -37,7 +37,7 @@ body {
 
 .sign {
     width: 100px;
-    background-color: rgba(0, 0, 100, .6);
+    background-color: rgba(0, 0, 100, 0.6);
     color: rgba(255, 255, 255, 1);
     font-weight: bold;
     border: 2px solid rgba(0, 0, 100, 0.5);
@@ -50,4 +50,18 @@ h1 {
 
 .margin-base-vertical {
     margin: 35px 0;
+}
+
+.btn-xlarge {
+    transform:scale(1.3,1.3);
+    -ms-transform:scale(1.3,1.3); /* IE 9 */
+    -moz-transform:scale(1.3,1.3); /* Firefox */
+    -webkit-transform:scale(1.3,1.3); /* Safari and Chrome */
+    -o-transform:scale(1.3,1.3); /* Opera */
+/*    padding: 18px 28px;
+    font-size: 22px; //change this to your desired size
+    line-height: normal;
+    -webkit-border-radius: 8px;
+       -moz-border-radius: 8px;
+            border-radius: 8px; */
 }
