--- a/css/interface.css
+++ b/css/interface.css
@@ -23,6 +23,10 @@ body {
     background-color: rgba(255, 255, 255, 0);
 }
 
+.tab{
+    margin: 0;
+}
+
 .center {
     display: table
     width: auto;
