--- a/css/template.css
+++ b/css/template.css
@@ -1,3 +1,11 @@
+.activity-font {
+    font-family: helvetica, arial;
+    font-size: 14px;
+}
+.repair-font {
+    font-family: helvetica, arial;
+    font-size: 14px;
+}
 .meal-font {
     font-family: helvetica, arial;
     font-size: 14px;
