--- a/css/template.css
+++ b/css/template.css
@@ -1,5 +1,5 @@
 .bodyfont {
-    font-family: helvetica, arial;
+    font-family: helvetica, arial, sans-serif;
     font-size: 14px;
 }
 .circular {
